--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1682,6 +1682,7 @@
     <string name="cpu_undervolt">Undervolt</string>
     <string name="cpu_undervolt_summary">Undervolt the CPU</string>
     <string name="cpu_max_freq_summary" translatable="false">%s</string>
+    <string name="cpu_undervolt_summary">Underolt the CPU (improves battery life but may cause instability)</string>
     <string name="cpu_set_on_boot">Set on boot</string>
     <string name="cpu_set_on_boot_summary">Restore the processor settings on boot</string>
 
