--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="icon_picker_facebook">Facebook</string>
     <string name="icon_picker_gallery">Gallery</string>
     <string name="icon_picker_googleplus">Google Plus</string>
-    <string name="icon_picker_googletalk">Google Talk</string>
+    <string name="icon_picker_googletalk">Hangouts</string>
     <string name="icon_picker_maps">Maps</string>
     <string name="icon_picker_movie">Movie</string>
     <string name="icon_picker_music">Music</string>
@@ -836,18 +836,18 @@
     <!-- Advanced, Device specific (DeviceParts) settings #CM -->
     <string name="advanced_settings_title">Advanced</string>
 
-<!-- INTERFACE Settings #CM -->
-    <!-- Settings main menu category heading. Interface (Launcher, Themes, System). [CHAR LIMIT=40] -->
-    <string name="header_category_interface">INTERFACE</string>
+<!-- PERSONALIZATION Settings #CM -->
+    <!-- Settings main menu category heading. Personalization (Homescreen, Themes, Interface). [CHAR LIMIT=40] -->
+    <string name="header_category_personalization">PERSONALIZATION</string>
 
-    <!-- Launcher settings #CM -->
-    <string name="launcher_settings_title">Launcher</string>
+    <!-- Home screen settings #CM -->
+    <string name="launcher_settings_title">Home screen</string>
 
     <!-- Themes settings #CM -->
     <string name="themes_settings_title">Themes</string>
 
-    <!-- System Interface settings #CM -->
-    <string name="system_settings_title">System</string>
+    <!-- Interface settings #CM -->
+    <string name="system_settings_title">Interface</string>
     <string name="system_interface_title">System interface</string>
     
     <!-- Notification Drawer #CM -->
@@ -1158,7 +1158,7 @@
     <!-- Hint text shown in owner info edit text [CHAR LIMIT=50] -->
     <string name="owner_info_settings_edit_text_hint">Type text to display on the lock screen</string>
     <!-- Main Settings screen setting option title for the item to take you to the location screen -->
-    <string name="location_settings_title">Location services</string>
+    <string name="location_settings_title">Location access</string>
     <!-- Main Settings screen setting option title for the item to take you to the security screen -->
     <string name="security_settings_title">Security</string>
     <!-- Main Settings screen setting option summary text for the item tot ake you to the security and location screen -->
@@ -4555,10 +4555,6 @@ found in the list of installed apps.</string>
     <string name="increasing_ring_interval_3seconds">3 seconds</string>
     <string name="increasing_ring_interval_5seconds">5 seconds</string>
     <string name="increasing_ring_interval_10seconds">10 seconds</string>
-
-    <!-- CM Updater -->
-    <string name="cmupdate_settings_title">CyanogenMod updates</string>
-    <string name="cmupdate_settings_summary">Check for, view or install available updates</string>
 
     <!-- Status bar at bottom -->
     <string name="status_bar_bottom_title">Display at bottom</string>
